// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      {
        "marginBottom": 20,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#a3a3a3",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 22,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 22,
        },
        {
          "backgroundColor": "#7866DC",
          "borderColor": "#7866DC",
        },
      ]
    }
  >
    <Text />
  </View>
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 16,
      }
    }
  >
    Passed
  </Text>
</View>
`;

exports[`CheckBox Component renders correctly when checked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      {
        "marginBottom": 20,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#a3a3a3",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 22,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 22,
        },
        {
          "backgroundColor": "#7866DC",
          "borderColor": "#7866DC",
        },
      ]
    }
  >
    <Text />
  </View>
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 16,
      }
    }
  >
    Passed
  </Text>
</View>
`;

exports[`CheckBox Component renders correctly when unchecked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      {
        "marginBottom": 20,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "#a3a3a3",
          "borderRadius": 4,
          "borderWidth": 2,
          "height": 22,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 22,
        },
        false,
      ]
    }
  />
  <Text
    style={
      {
        "color": "#fff",
        "fontSize": 16,
      }
    }
  >
    Passed
  </Text>
</View>
`;
